--- a/pages/limpieza-y-hogar.html
+++ b/pages/limpieza-y-hogar.html
@@ -10,18 +10,17 @@
 <body>
     <header>
     <nav class="navbar">
-      <h1 class="logo">LIMPIEZA Y HOGAR</h1>
-      <ul class="nav-links">
+    <h1 class="logo">LIMPIEZA Y HOGAR</h1>
+    <ul class="nav-links">
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./pages/pet-shop.html">Pet Shop</a></li>
-        <li><a href="./pages/nosotros.html">Nosotros</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
-        <li><a href="./pages/carrito.html">Carrito</a></li>
-      </ul>
+        <li><a href="./pet-shop.html">Pet Shop</a></li>
+        <li><a href="./nosotros.html">Nosotros</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
+    </ul>
     </nav>
     </header>
 
-  <main>
+<main>
     <!-- SECCIÓN 1: ARTÍCULOS POR BIDÓN O LITRO -->
     <section class="productos-limpieza">
         <h2>Artículos de Limpieza por Bidón o Litro</h2>
@@ -47,6 +46,56 @@
                 <p>Crema limpiadora por litro.</p>
                 <button class="btn">Agregar al carrito</button>
             </div>
+            <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+                <div class="card">
+                <img src="../assets/productos/poett.jpg" alt="Poett Lavanda">
+                <h3>Poett Lavanda</h3>
+                <p class="precio">$1500</p>
+                <p>Aromatizante multiuso 1L.</p>
+                <button class="btn">Agregar al carrito</button>
+            </div>
+            </div>
+
         </div>
     </section>
 
@@ -134,7 +183,7 @@
         </div>
     </section>
 
-  </main>
+</main>
 
     <footer>
 
