--- a/index.html
+++ b/index.html
@@ -116,17 +116,25 @@
 <footer>
 
   <div class="footer-content">
-      <p>&copy; 2025 Pet & Home. Todos los derechos reservados.</p>
+      <p>&copy; 2025 Pet & Home. Todos los derechos reservados. Creado por Melina.</p>
       <p>📧 estacion.morty@gmail.com | 📞 +54 9 2616 00 4422</p>
       <p>Horarios de atención : Lunes a jueves 9:30 - 13:30 / 17:30 - 20:30</p>
       <p>Sábado 10:30 - 14:00</p>
       <p>Domingo 11:00 - 13:30</p>
       <p>Síguenos: 
-        <a href="#">Instagram</a> / 
-        <a href="#">WhatsApp</a>
+        <a href="https://www.instagram.com/estacion.morty">Instagram</a> / 
+        <a href="https://wa.me/5492616004422">WhatsApp</a>
       </p>
     </div>
-
+    <!-- Botones flotantes -->
+<div class="social-floating">
+    <a href="https://wa.me/5492616004422" target="_blank" class="float-btn whatsapp">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+    </a>
+    <a href="https://www.instagram.com/estacion.morty" target="_blank" class="float-btn instagram">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+    </a>
+</div>
 </footer>
 
 </body>
