Modificada la pagina de contacto, nosotros y style

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,10 +14,9 @@
     <h1 class="logo">CONTACTANOS</h1>
     <ul class="nav-links">
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./pages/limpieza-y-hogar.html">Limpieza</a></li>
-        <li><a href="./pages/pet-shop.html">Pet Shop</a></li>
-        <li><a href="./pages/nosotros.html">Nosotros</a></li>
-        <li><a href="./pages/carrito.html">Carrito</a></li>
+        <li><a href="./limpieza-y-hogar.html">Limpieza</a></li>
+        <li><a href="./pet-shop.html">Pet Shop</a></li>
+        <li><a href="./nosotros.html">Nosotros</a></li>
     </ul>
     </nav>
 </header>
@@ -27,13 +26,26 @@
     </main>
 
     <footer>
-
-        <p>¡Síguenos en redes sociales!</p>
-        <nav>
-            <a href="https://www.facebook.com/share/1HGgB2949N/?mibextid=wwXIfr"> Facebook</a> 
-            <a href="https://www.instagram.com/estacion.morty?igsh=MXh5OWVwcm1qNTRwZw==">Instagram</a>
-        </nav>
-        
+    <div class="footer-content">
+    <p>&copy; 2025 Pet & Home. Todos los derechos reservados. Creado por Melina.</p>
+    <p>📧 estacion.morty@gmail.com | 📞 +54 9 2616 00 4422</p>
+    <p>Horarios de atención : Lunes a jueves 9:30 - 13:30 / 17:30 - 20:30</p>
+    <p>Sábado 10:30 - 14:00</p>
+    <p>Domingo 11:00 - 13:30</p>
+    <p>Síguenos: 
+        <a href="https://www.instagram.com/estacion.morty">Instagram</a> / 
+        <a href="https://wa.me/5492616004422">WhatsApp</a>
+    </p>
+    </div>
+    <!-- Botones flotantes -->
+<div class="social-floating">
+    <a href="https://wa.me/5492616004422" target="_blank" class="float-btn whatsapp">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+    </a>
+    <a href="https://www.instagram.com/estacion.morty" target="_blank" class="float-btn instagram">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+    </a>
+</div>
     </footer>
     
 </body>
