--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,7 +16,6 @@
         <li><a href="./pages/limpieza-y-hogar.html">Limpieza</a></li>
         <li><a href="./pages/pet-shop.html">Pet Shop</a></li>
         <li><a href="./pages/contacto.html">Contacto</a></li>
-        <li><a href="./pages/carrito.html">Carrito</a></li>
     </ul>
     </nav>
     </header>
@@ -41,13 +40,11 @@
             </ul>
         </div>
     </section>
-
-    <!-- FOTO DESTACADA -->
-    <section class="imagen-nosotros">
-        <blockquote>"Gracias por confiar en nosotros y ser parte de esta aventura. ¡Tu satisfacción es nuestra prioridad!"</blockquote>
+    
+    <section class="mensaje-central">
+        <blockquote>¡Gracias por confiar en nosotros y ser parte de esta aventura!</blockquote>
     </section>
 
-    <!-- POR QUÉ ELEGIRNOS -->
     <section class="beneficios">
         <h2>¿Por qué elegirnos?</h2>
         <div class="beneficios-grid">
@@ -70,14 +67,18 @@
         </div>
     </section>
 
-    <!-- CTA -->
     <div class="btn-container">
         <a href="./contacto.html" class="btn">¡Contactanos ahora!</a>
     </div>
 
-        <section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d342.2284476938708!2d-68.84378991604034!3d-32.865169645772944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09642bca3397%3A0x5d8e6f3234e4b688!2sEstacion%20Morty!5e0!3m2!1ses!2sjp!4v1747318310634!5m2!1ses!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+    <section class="ubicacion">
+        <h2>¿Dónde estamos?</h2>
+        <p>Mendoza - Las Heras</p>
+        <div class="mapa-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d342.2284476938708!2d-68.84378991604034!3d-32.865169645772944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09642bca3397%3A0x5d8e6f3234e4b688!2sEstacion%20Morty!5e0!3m2!1ses!2sjp!4v1747318310634!5m2!1ses!2sjp" 
+                allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </section>
     
     </main>
 
