paginas modificadas, cambio de nombre de paginas sass

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <title>Pet & Home</title>
   <link rel="stylesheet" href="./style/style.css">
   <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon">
+  <meta name="description" content="Pet & Home: Tu tienda de confianza en Mendoza para productos de limpieza y artículos para mascotas. Ofrecemos calidad, variedad y precios justos en todo lo que tu hogar y tus mascotas necesitan.">
+  <meta name="keywords" content="Pet & Home, Limpieza, Pet Shop, Animales, Tienda, Local, Mendoza, Argentina, Las Heras, Cuidad, Godoy Cruz, Sexta Seccion, Parque Central, Gatos, Perros, Plantas,Alimentos, Animales">
+  <meta name="author" content="Melina Rodriguez Takemura">
+  <meta name="owner" content="Pet & Home">
 </head>
 <body>
 
-  <!-- MENÚ DE NAVEGACIÓN -->
   <header>
     <nav class="navbar">
       <h1 class="logo">ESTACIÓN MORTY</h1>
@@ -24,9 +27,8 @@
   </header>
 
   <main>
-  <!-- SECCIÓN HOME -->
   <section id="inicio" class="hero">
-    <div class="overlay"></div> <!-- fondo oscuro transparente -->
+    <div class="overlay"></div>
     <div class="hero-content">
       <h2>Bienvenido a Hogar & Mascotas</h2>
       <p>Productos de limpieza y todo para tus mascotas en un solo lugar.</p>
@@ -37,13 +39,11 @@
     </div>
   </section>
 
-    <!-- SECCIÓN QUIÉNES SOMOS -->
     <section class="sobre-nosotros">
       <h2>¿Quiénes somos?</h2>
       <p>En <strong>Pet & Home</strong> ofrecemos soluciones para el cuidado del hogar y de tus mascotas. Combinamos productos de limpieza de calidad con accesorios, juguetes y alimentos para tus compañeros peludos.</p>
     </section>
 
-    <!-- SECCIÓN MARCAS -->
 <section class="top-marcas">
   <h2>Nuestras marcas destacadas</h2>
   <div class="marcas-container">
@@ -101,12 +101,9 @@
     <div class="marca">
       <img src="https://mir-s3-cdn-cf.behance.net/projects/404/ed0c4f80069101.Y3JvcCwyODIyLDIyMDgsNjksMA.jpg" alt="Poett">
     </div>
-
-
   </div>
 </section>
 
-    <!-- LLAMADO A LA ACCIÓN -->
     <section class="cta">
       <h2>¿Querés saber más o hacer un pedido?</h2>
       <a href="./pages/contacto.html" class="btn">Contactanos</a>
@@ -126,7 +123,7 @@
         <a href="https://wa.me/5492616004422">WhatsApp</a>
       </p>
     </div>
-    <!-- Botones flotantes -->
+
 <div class="social-floating">
     <a href="https://wa.me/5492616004422" target="_blank" class="float-btn whatsapp">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
