--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,10 @@
     <title>Pet & Home - Contacto</title>
     <link rel="shortcut icon" href="../assets/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
+    <meta name="description" content="¿Tenés dudas o querés hacer un pedido? Contactanos por WhatsApp, Instagram o a través de nuestro formulario. Estamos en Mendoza, ¡escribinos ahora!">
+    <meta name="keywords" content="contacto, WhatsApp, pedidos, Mendoza, Las Heras, Redes sociales, envios a domicilio, delivery, perros, gatos emprendedores, parque central, Argentina, sexta seccion, email, contacto,">
+    <meta name="author" content="Melina Rodriguez Takemura">
+    <meta name="owner" content="Pet & Home">
 </head>
 
 <body>
