--- a/pages/limpieza-y-hogar.html
+++ b/pages/limpieza-y-hogar.html
@@ -6,6 +6,10 @@
     <title>Pet & Home - Limpieza y Hogar</title>
     <link rel="shortcut icon" href="../assets/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
+    <meta name="description" content="Amplia variedad de productos de limpieza por litro, desinfectantes, sahumerios, utensilios y más. Todo lo que necesitas para un hogar impecable en Mendoza.">
+    <meta name="keywords" content="productos de limpieza, por litro, hogar, bidones, lavandina, jabones, desengrasantes,jabon de ropa, skip, sahumerios, escobillones, palo santo, palas,bolsas de consorcio, parque central, sexta seccion, Las Heras, Godoy Cruz,Cuidad,Argetina">
+    <meta name="author" content="Melina Rodriguez Takemura">
+    <meta name="owner" content="Pet & Home">
 </head>
 <body>
     <header>
