--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,10 @@
     <title>Pet & Home - Nosotros</title>
     <link rel="shortcut icon" href="../assets/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
+    <meta name="description" content="Somos Pet & Home, una tienda en Mendoza dedicada a ofrecer productos de limpieza y artículos para mascotas con calidad, confianza y atención personalizada.">
+    <meta name="keywords" content="tienda de limpieza, pet shop, Mendoza, Las Heras, Godoy Cruz, Parque Central, Sexta Seccion, Emprendedores, Tienda, Local, Atencion al cliente, Mayoristas">
+    <meta name="author" content="Melina Rodriguez Takemura">
+    <meta name="owner" content="Pet & Home">
 </head>
 <body>
     <header>
@@ -13,9 +17,9 @@
     <h1 class="logo">SOBRE NOSOTROS</h1>
     <ul class="nav-links">
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./pages/limpieza-y-hogar.html">Limpieza</a></li>
-        <li><a href="./pages/pet-shop.html">Pet Shop</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="./limpieza-y-hogar.html">Limpieza</a></li>
+        <li><a href="./pet-shop.html">Pet Shop</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
     </ul>
     </nav>
     </header>
