--- a/pages/pet-shop.html
+++ b/pages/pet-shop.html
@@ -6,7 +6,10 @@
     <title>Pet & Home - Pet Shop</title>
     <link rel="shortcut icon" href="../assets/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
-    
+    <meta name="description" content="Alimentos premium para perros y gatos, juguetes, accesorios y productos de cuidado para tus mascotas. Calidad garantizada y precios justos en Pet & Home Mendoza.">
+    <meta name="keywords" content="Alimentos para mascotas, juguetes, accesorios, gatos, perros, pajaros, Whiskas, Upper, Shampoo para mascotas, Pedigree, Raza, Cachorros, Royal Canin,Purina, Siegger, Pro Plan, Pipetas.">
+    <meta name="author" content="Melina Rodriguez Takemura">
+    <meta name="owner" content="Pet & Home">
 </head>
 
 <body class="petshop-bg">
@@ -358,7 +361,6 @@
         <a href="https://wa.me/5492616004422">WhatsApp</a>
     </p>
     </div>
-    <!-- Botones flotantes -->
         <div class="social-floating">
     <a href="https://wa.me/5492616004422" target="_blank" class="float-btn whatsapp">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
